fix(ui-grid-header-cell): Improved styles with grid menu.
Fixed some of the more blatant issues of overlap between the grid menu and the last visible column,
although some issues remain with the timing of the digest cycle. Also, updated the grid menu styles
a bit based on some CSS suggestions.

fix #4337, fix #5051, fix #5557

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -104,8 +104,24 @@
   }
 }
 
-.ui-grid-column-menu-button-last-col {
-  margin-right: 25px;
+.ui-grid-header-cell-last-col {
+  .ui-grid-cell-contents,
+  .ui-grid-filter-container,
+  .ui-grid-column-menu-button,
+  & + .ui-grid-column-resizer.right {
+    margin-right: 13px;
+  }
+}
+
+.ui-grid-render-container-right {
+  .ui-grid-header-cell-last-col {
+    .ui-grid-cell-contents,
+    .ui-grid-filter-container,
+    .ui-grid-column-menu-button,
+    & + .ui-grid-column-resizer.right {
+      margin-right: 28px;
+    }
+  }
 }
 
 .ui-grid-column-menu {
@@ -195,7 +211,7 @@
 }
 
 input[type="text"].ui-grid-filter-input {
-  padding: 0;
+  padding: 0 18px 0 0;
   margin: 0;
   border: 0;
   width: 100%;
